Possible compatibility problems with earlier versions marked with '*'.

Implemented cs_look and proper cs_rcvconnect.

Fixed COMSTACK error that occurred on HPUX. Fix by Giannis Kosmas.

Configure detects POSIX threads on OpenBSD.

When sort flag 'i' was specified in yaz-client the caseSensitivy flag
was set to a wrong value.  Thanks to Robert Sanderson for reporting this.

When error is returned from present handler, non-surrogate diagnostic
is returned in present response (and fetch handler is no longer called).

* Minor adjustments to pquery parser (PQF). Token characters may be
escaped by using backslash (C-style).

PQF parser allows string attribute values to be specified. For @attr,
non-numeric characters after the equal-sign are treated as strings
(e.g. @attr 9=title).

CCL trunction character may be defined (@truncation in file)

* function zget_ExtendedServicesRequest sets waitAction to
  waitIfPossible (was wait).

Added cs_set_blocking to set change blocking mode of a COMSTACK. Thanks
to Matthew Carey.

CCL operator names may be set in field definition files (CCL_bibset).
See ccl/bib1 for an example.

Fixes in ASN.1 compiler for C++ compatibility.

* Renamed members "and" and "or" in struct Z_Operator to "op_and"
and "op_or" to avoid conflict with C++.

Fixed problem with GNU readline detection on Redhat 7.0.

Added step-size for Scan backend handler.

Fixed bug that made the frontend server crash when no attribute
set was specified for scan.

Front-end server automatically switches to original working directory
when installed as an NT service. Previously -w had to be specified to
make it work.

Added extended attributes for retrieval module (data1), so that data1
records carry d1_readXML/SGML attributes. d1_read also supports
null-data rules ( <tag/>)

On UNIX when POSIX threads are available, a separate library libyazthread
is created. Programmers should link with that library and the yaz library